# findex

./: .firebaserc  .gitignore  CHANGELOG.md  COMPETITIVE_EDGE_ROADMAP.md  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  SECURITY.md  SKILL.md  architecture.md  base.txt  download_models.ps1  firebase.json  install.ps1  install.sh  mcp-config.json  plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/findex-cli/: Cargo.toml
crates/findex-cli/src/: agent_setup.rs  ingest_sprite.rs  main.rs  tui.rs
crates/findex-core/: Cargo.toml
crates/findex-core/queries/: c.scm  cpp.scm  csharp.scm  css.scm  dart.scm  go.scm  html.scm  java.scm  php.scm  python.scm  ruby.scm  rust.scm  swift.scm
crates/findex-core/src/: auth.rs  cancellation.rs  discovery.rs  graph_pruning.rs  graph_query.rs  intelligence.rs  lib.rs  mcp.rs  mcp_http.rs  mcp_tasks.rs  merkle.rs  models.rs  runtime.rs  semantic_diff.rs  settings.rs  stack_graphs.rs  storage.rs  structural_locality.rs  taint.rs  telemetry.rs  token_budget.rs  updater.rs  vfs.rs  watch.rs
crates/findex-core/src/parser/: js_ts.rs  mod.rs  registry.rs  tree_sitter_impl.rs  vue.rs
crates/findex-core/src/resolver/: mod.rs
crates/findex-core/src/search/: chunker.rs  hybrid.rs  lexical.rs  local_embedder.rs  mmr.rs  mod.rs  query_cache.rs  query_intent.rs  rerank.rs  vector.rs
crates/findex-core/src/skeleton/: mod.rs  pagerank.rs
crates/findex-core/tests/fixtures/: updater_payload.txt  updater_payload.txt.sig  updater_public_key.txt
crates/findex-core/tsg/: c.tsg  cpp.tsg  css.tsg  dart.tsg  go.tsg  html.tsg  rust.tsg
crates/findex-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  tauri.updater.conf.json  tsconfig.json  vite.config.ts
crates/findex-tauri/capabilities/: default.json
crates/findex-tauri/icons/: icon.icns
crates/findex-tauri/permissions/: allow-all.json  allow-all.toml
crates/findex-tauri/scripts/: prepare-sidecar.mjs
crates/findex-tauri/src/: main.rs
crates/findex-tauri/static/: index.html
crates/findex-tauri/ui/: index.html
crates/findex-tauri/ui/src/: ActivityGlyph.tsx  App.tsx  GraphCanvas.tsx  SyntaxBlock.tsx  api.ts  main.tsx  mock.ts  styles.css  types.ts
crates/findex-tauri/windows/: cli-path.wxs  hooks.nsh
firebase/: firestore.rules
firebase/hosting/: auth.css  auth.js  index.html
references/: agent-playbook.md  operations.md  tools.md
scripts/: build_cli_manifest.ps1  install.ps1  install.sh
