[package]
name = "findex-tauri"
version = "3.1.1"
edition = "2021"

[dependencies]
findex-core = { path = "../findex-core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
uuid = { workspace = true }
rfd = "0.14.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
cuda = ["findex-core/cuda"]
